# tree-sitter-gloss

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Taskfile.yml  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gloss.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gloss/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGloss/: gloss.h
bindings/swift/TreeSitterGlossTests/: TreeSitterGlossTests.swift
examples/: app.gloss  app.go  comments.gloss  enums.gloss  full.gloss  models.gloss  views.gloss
queries/: definitions  highlights.scm  indents  locals.scm  queries  tags.scm
samples/: app.gloss
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/corpus/: comment.txt  enum.txt  expressions.txt  functions.txt  model.txt  statements.txt  struct.txt  struct_declarations.txt  union.txt  values.txt  variables.txt  view.txt
